--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-twitter-embed": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-dev-middleware": "^7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
