--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-twitter-embed": "^4.0.4",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "webpack-dev-middleware": "^7.1.1"
   },
